--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button onclick="login()">Login</button>
         <button onclick="register()">Register</button>
     </div>
+    <div id="message" style="display:none;">Giriş yapıldı!</div>
     <div id="demoGame">
         <button onclick="startDemoGame()">Play Demo Game</button>
     </div>
