--- a/index.html
+++ b/index.html
@@ -27,7 +27,23 @@
     <script src="game.js"></script>
 </body>
 </html>
+<!-- Google ile Giriş Butonu -->
+  <button onclick="googleSignIn()">Google ile Giriş Yap</button>
 
+  <!-- Çıkış Yap Butonu -->
+  <button onclick="googleSignOut()">Çıkış Yap</button>
+
+  <!-- Demo Kullanıcı Butonu -->
+  <button onclick="demoPlay()">Demo Oyna</button>
+
+  <!-- Firebase ve Google Girişi için Scriptler -->
+  <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-firestore.js"></script>
+  <script src="firebase.js"></script>
+  <script src="your-game.js"></script>
+</body>
+</html>
 
 <html lang="en">
   <head>
